[package]
name = "rusty_cardano_wallet"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_cardano_wallet"
crate-type = ["staticlib", "cdylib"]

[target.'cfg(target_os="android")'.dependencies]
jni = "0.20.0"

[dependencies]
base64 = "0.21.0"
bip39 = "1.0.1"
cardano-serialization-lib = "11.1.1"
cbindgen = "0.24.3"
cryptoxide = "0.4.2"
getrandom = "0.2.8"
jni = "0.20.0"
libc = "0.2.138"
serde = "1.0.152"
serde-aux = "4.1.2"
serde_json = "1.0.91"

[build-dependencies]
cbindgen = "0.24.3"
